@@ -66,7 +66,7 @@ TauJetConfigFileLoose ttHMultilepton/tight_tau_selection.conf
 #Jet cuts
 JetPt 25000.
 JetEta 2.5
-BTaggingWP 70%
+BTaggingWP FixedCutBEff_70
 
 #Truth jet cuts
 TruthJetPt 25000.
